Responsiveness for public country map, fixing new map z-index issue

--- a/src/components/Prompts/PopupPrompts.scss
+++ b/src/components/Prompts/PopupPrompts.scss
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     left: 0;
+    top: 0;
     width: 100vw;
     height: 100vh;
     z-index: 1050;
